<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:inputType="textPassword"
        android:hint="Contraseña"
        android:id="@+id/edit_text_password"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:inputType="textPassword"
        android:hint="jane.doe"
        android:id="@+id/edit_text_user"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="¿Aún no tienes cuenta?"
        android:id="@+id/button_no_cuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        />

</androidx.constraintlayout.widget.ConstraintLayout>